# atlas-cmake-pybind-attempt

./: .gitignore  Makefile  README.md  build.sh  setup.sh  test_runner.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  myexec.cpp  package_filters.txt
src/AnalysisPackage/: CMakeLists.txt
src/AnalysisPackage/AnalysisPackage/: AnalysisPackageDict.h  ISomeCPTool.h  SomeCPTool.h  TestClass.h  UserAlgorithm.h  selection.xml
src/AnalysisPackage/Root/: SomeCPTool.cxx  SomeCPTool.h  TestClass.cxx  UserAlgorithm.cxx
src/AnalysisPackage/util/: run.cxx
src/bindings/: CMakeLists.txt  module.cpp
tests/: ci.sh  test_add.py
